Worked on learning more PyTorch.

--- a/pytorch_exercises.ipynb
+++ b/pytorch_exercises.ipynb
@@ -47,10 +47,10 @@
       "tensor([[1., 1.],\n",
       "        [1., 1.],\n",
       "        [1., 1.]])\n",
-      "tensor([[2, 6, 4, 4, 1, 3],\n",
-      "        [6, 0, 4, 1, 1, 7],\n",
-      "        [0, 5, 7, 8, 1, 5],\n",
-      "        [6, 7, 1, 3, 1, 3]])\n"
+      "tensor([[3, 2, 3, 4, 4, 0],\n",
+      "        [2, 6, 6, 4, 2, 5],\n",
+      "        [4, 2, 2, 0, 6, 2],\n",
+      "        [8, 2, 5, 6, 3, 2]])\n"
      ]
     }
    ],
@@ -245,70 +245,70 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.4988, 0.4841, 0.4792, 0.5236, 0.4730, 0.5306, 0.5206, 0.5241, 0.5200,\n",
-       "         0.4922],\n",
-       "        [0.5019, 0.4898, 0.4670, 0.5216, 0.4418, 0.5075, 0.5114, 0.4935, 0.4842,\n",
-       "         0.5059],\n",
-       "        [0.5228, 0.4733, 0.4533, 0.4939, 0.4796, 0.5236, 0.4765, 0.5052, 0.5030,\n",
-       "         0.4994],\n",
-       "        [0.4871, 0.4741, 0.4725, 0.5020, 0.4317, 0.5002, 0.4670, 0.5020, 0.4989,\n",
-       "         0.4849],\n",
-       "        [0.4935, 0.4819, 0.4665, 0.4987, 0.4663, 0.4736, 0.5441, 0.5287, 0.4526,\n",
-       "         0.4820],\n",
-       "        [0.5296, 0.5170, 0.4890, 0.5054, 0.4644, 0.5075, 0.4922, 0.5117, 0.4817,\n",
-       "         0.4970],\n",
-       "        [0.4833, 0.5151, 0.4751, 0.4924, 0.4689, 0.5169, 0.5132, 0.5237, 0.4776,\n",
-       "         0.4885],\n",
-       "        [0.4987, 0.4947, 0.4921, 0.5055, 0.4634, 0.5072, 0.5100, 0.5302, 0.4868,\n",
-       "         0.4762],\n",
-       "        [0.5116, 0.4906, 0.4640, 0.5035, 0.4683, 0.5267, 0.5075, 0.4731, 0.5155,\n",
-       "         0.4875],\n",
-       "        [0.5169, 0.4787, 0.4783, 0.5018, 0.4987, 0.5185, 0.5126, 0.4989, 0.4947,\n",
-       "         0.4634],\n",
-       "        [0.4924, 0.5225, 0.4940, 0.5046, 0.4151, 0.5073, 0.5217, 0.5141, 0.4647,\n",
-       "         0.4789],\n",
-       "        [0.5019, 0.4961, 0.4787, 0.5147, 0.4701, 0.5156, 0.4747, 0.5195, 0.4971,\n",
-       "         0.4925],\n",
-       "        [0.4920, 0.4887, 0.4674, 0.5243, 0.4288, 0.5258, 0.5325, 0.5299, 0.4807,\n",
+       "tensor([[0.4599, 0.5394, 0.4764, 0.4776, 0.5054, 0.5076, 0.4749, 0.4923, 0.5280,\n",
+       "         0.4596],\n",
+       "        [0.5115, 0.5050, 0.4786, 0.4920, 0.4989, 0.4763, 0.4771, 0.5327, 0.5011,\n",
+       "         0.5063],\n",
+       "        [0.5041, 0.5357, 0.5031, 0.4684, 0.5349, 0.4862, 0.5036, 0.5065, 0.5069,\n",
+       "         0.5097],\n",
+       "        [0.4905, 0.4959, 0.4692, 0.5008, 0.5270, 0.4744, 0.5156, 0.5101, 0.5320,\n",
+       "         0.4808],\n",
+       "        [0.5056, 0.5185, 0.4976, 0.5044, 0.5101, 0.4506, 0.4938, 0.5050, 0.5355,\n",
+       "         0.5075],\n",
+       "        [0.5027, 0.4959, 0.4888, 0.5201, 0.5160, 0.4874, 0.4763, 0.4828, 0.5213,\n",
+       "         0.4990],\n",
+       "        [0.4873, 0.5053, 0.4879, 0.4771, 0.5255, 0.4896, 0.5024, 0.5420, 0.5096,\n",
+       "         0.5245],\n",
+       "        [0.4846, 0.4942, 0.4465, 0.4902, 0.5452, 0.4736, 0.4758, 0.5261, 0.4948,\n",
+       "         0.4560],\n",
+       "        [0.5100, 0.4994, 0.4615, 0.4500, 0.5217, 0.4697, 0.5069, 0.5296, 0.4864,\n",
+       "         0.4469],\n",
+       "        [0.5345, 0.5522, 0.4715, 0.4894, 0.5062, 0.4539, 0.5031, 0.4943, 0.5135,\n",
+       "         0.5134],\n",
+       "        [0.5103, 0.4941, 0.4789, 0.5018, 0.5538, 0.5052, 0.4603, 0.5385, 0.5097,\n",
+       "         0.4808],\n",
+       "        [0.5154, 0.5016, 0.4700, 0.5040, 0.5359, 0.4998, 0.5012, 0.4996, 0.5220,\n",
+       "         0.4701],\n",
+       "        [0.4947, 0.5138, 0.4643, 0.4890, 0.5295, 0.4630, 0.5099, 0.4828, 0.4986,\n",
+       "         0.4869],\n",
+       "        [0.4843, 0.5195, 0.4700, 0.4790, 0.5199, 0.4489, 0.4967, 0.4904, 0.4786,\n",
+       "         0.4806],\n",
+       "        [0.4865, 0.5261, 0.5091, 0.4582, 0.5443, 0.4964, 0.4849, 0.5151, 0.5040,\n",
+       "         0.4914],\n",
+       "        [0.5022, 0.5284, 0.4973, 0.5173, 0.5530, 0.4916, 0.4741, 0.5355, 0.5031,\n",
+       "         0.4801],\n",
+       "        [0.4908, 0.5321, 0.4704, 0.4894, 0.5117, 0.4541, 0.4968, 0.5396, 0.4812,\n",
+       "         0.4898],\n",
+       "        [0.5346, 0.4728, 0.4670, 0.4954, 0.5138, 0.5047, 0.4836, 0.5013, 0.4810,\n",
+       "         0.4942],\n",
+       "        [0.4702, 0.4903, 0.4683, 0.4994, 0.5194, 0.4916, 0.4798, 0.5129, 0.4824,\n",
+       "         0.4843],\n",
+       "        [0.4929, 0.5249, 0.4889, 0.4913, 0.5239, 0.4809, 0.4929, 0.5279, 0.5294,\n",
+       "         0.4780],\n",
+       "        [0.4905, 0.5410, 0.4785, 0.5073, 0.4958, 0.4921, 0.5048, 0.5021, 0.5201,\n",
+       "         0.4699],\n",
+       "        [0.4883, 0.4947, 0.4744, 0.4731, 0.5181, 0.4784, 0.4699, 0.5331, 0.5118,\n",
        "         0.4979],\n",
-       "        [0.5171, 0.4914, 0.4768, 0.5016, 0.4604, 0.4994, 0.5162, 0.4841, 0.5343,\n",
-       "         0.4419],\n",
-       "        [0.5209, 0.5128, 0.4845, 0.5045, 0.4462, 0.5166, 0.4925, 0.4686, 0.5265,\n",
-       "         0.5115],\n",
-       "        [0.4979, 0.4603, 0.4692, 0.4868, 0.5104, 0.4944, 0.5321, 0.5214, 0.4795,\n",
-       "         0.4504],\n",
-       "        [0.5021, 0.4860, 0.4774, 0.5174, 0.4831, 0.5301, 0.5021, 0.5222, 0.4978,\n",
-       "         0.5029],\n",
-       "        [0.5169, 0.4899, 0.4715, 0.4793, 0.4341, 0.5148, 0.4882, 0.5168, 0.4797,\n",
-       "         0.4931],\n",
-       "        [0.5063, 0.4970, 0.4570, 0.5117, 0.4721, 0.5138, 0.5385, 0.5182, 0.5151,\n",
-       "         0.5037],\n",
-       "        [0.5055, 0.5461, 0.4607, 0.4724, 0.4450, 0.5130, 0.4773, 0.5130, 0.4896,\n",
-       "         0.4857],\n",
-       "        [0.5314, 0.5139, 0.4776, 0.5067, 0.4116, 0.5029, 0.5168, 0.5091, 0.5373,\n",
-       "         0.5219],\n",
-       "        [0.5080, 0.5175, 0.4950, 0.5104, 0.4471, 0.5113, 0.5041, 0.4840, 0.5360,\n",
-       "         0.4854],\n",
-       "        [0.5014, 0.5223, 0.4863, 0.5351, 0.4716, 0.4932, 0.5260, 0.4991, 0.5246,\n",
-       "         0.5137],\n",
-       "        [0.5013, 0.5177, 0.4753, 0.4894, 0.4667, 0.5172, 0.5180, 0.5162, 0.5030,\n",
-       "         0.4523],\n",
-       "        [0.5166, 0.5054, 0.4782, 0.5466, 0.4760, 0.4991, 0.5193, 0.5237, 0.4712,\n",
+       "        [0.4830, 0.5021, 0.4694, 0.4860, 0.4906, 0.4440, 0.4824, 0.5187, 0.4932,\n",
+       "         0.4944],\n",
+       "        [0.5287, 0.5209, 0.4901, 0.4880, 0.5259, 0.4890, 0.4717, 0.5440, 0.4744,\n",
+       "         0.5032],\n",
+       "        [0.5199, 0.5103, 0.4796, 0.4929, 0.5149, 0.4995, 0.4993, 0.5142, 0.4779,\n",
        "         0.5060],\n",
-       "        [0.5183, 0.5063, 0.4696, 0.5044, 0.4762, 0.5243, 0.5258, 0.4964, 0.5036,\n",
-       "         0.4774],\n",
-       "        [0.5169, 0.4904, 0.4833, 0.5378, 0.4586, 0.5016, 0.5093, 0.5076, 0.4929,\n",
-       "         0.4879],\n",
-       "        [0.4914, 0.5013, 0.4716, 0.4959, 0.4659, 0.5138, 0.5166, 0.4947, 0.5244,\n",
-       "         0.5159],\n",
-       "        [0.5125, 0.4694, 0.4650, 0.5186, 0.4664, 0.5236, 0.5020, 0.5143, 0.4985,\n",
-       "         0.4847],\n",
-       "        [0.5111, 0.4947, 0.4890, 0.4827, 0.4624, 0.5283, 0.4983, 0.5124, 0.4866,\n",
-       "         0.5052],\n",
-       "        [0.4938, 0.5032, 0.4775, 0.5307, 0.4557, 0.5131, 0.5235, 0.5427, 0.5037,\n",
-       "         0.4807],\n",
-       "        [0.4930, 0.4975, 0.4819, 0.5110, 0.4964, 0.5241, 0.4809, 0.5188, 0.4899,\n",
-       "         0.5002]], grad_fn=<SigmoidBackward0>)"
+       "        [0.4971, 0.5054, 0.4598, 0.4919, 0.5127, 0.4801, 0.4897, 0.5300, 0.5099,\n",
+       "         0.4795],\n",
+       "        [0.5040, 0.5124, 0.4732, 0.5070, 0.5077, 0.4671, 0.4596, 0.5215, 0.4762,\n",
+       "         0.4849],\n",
+       "        [0.4878, 0.4792, 0.4709, 0.4917, 0.5182, 0.4776, 0.5149, 0.5027, 0.5138,\n",
+       "         0.4651],\n",
+       "        [0.4841, 0.5325, 0.4365, 0.4807, 0.5054, 0.4997, 0.4896, 0.5321, 0.4843,\n",
+       "         0.4874],\n",
+       "        [0.4769, 0.4804, 0.4344, 0.5131, 0.5086, 0.4577, 0.4800, 0.5185, 0.4723,\n",
+       "         0.5061],\n",
+       "        [0.4823, 0.5397, 0.4445, 0.4918, 0.5274, 0.4567, 0.5019, 0.5079, 0.5101,\n",
+       "         0.4783],\n",
+       "        [0.4879, 0.5211, 0.4517, 0.5125, 0.5053, 0.4784, 0.5268, 0.5061, 0.4812,\n",
+       "         0.4869]], grad_fn=<SigmoidBackward0>)"
       ]
      },
      "execution_count": 6,
@@ -376,6 +376,59 @@
     "    - natural language processing\n",
     "    - reinforcement learning"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec08e699-f187-41e3-a57b-f7570a8ea04e",
+   "metadata": {},
+   "source": [
+    "## What are CNNs and what are they used for?\n",
+    "\n",
+    "Convolutional Neural Networks (CNNs) are a class of deep neural networks that are commonly used for image and video processing applications. They are particularly well-suited to problems where the input data has a grid-like structure, such as images, because they can learn spatial hierarchies of features from the data. CNNs consist of one or more convolutional layers, followed by one or more fully connected layers.\n",
+    "\n",
+    "## Convolutional layers and filters\n",
+    "\n",
+    "Convolutional layers are the building blocks of CNNs. They consist of a set of learnable filters, each of which is convolved with the input image to produce a set of feature maps. Each filter is a small matrix of weights that is trained to detect a particular feature in the input image, such as a horizontal or vertical edge. The output of a convolutional layer is a set of feature maps that represent different features of the input image.\n",
+    "\n",
+    "## Pooling layers\n",
+    "\n",
+    "Pooling layers are used to downsample the feature maps produced by the convolutional layers. They work by dividing the feature maps into non-overlapping regions and taking the maximum or average value within each region. This reduces the spatial dimensions of the feature maps while preserving the important features.\n",
+    "\n",
+    "## Activation functions for CNNs\n",
+    "\n",
+    "Activation functions are used to introduce nonlinearity into the output of the convolutional layers. This allows the CNN to learn more complex representations of the input data. Common activation functions for CNNs include ReLU (Rectified Linear Unit) and sigmoid.\n",
+    "\n",
+    "## Example: Image classification using a CNN\n",
+    "An example of using CNNs is image classification, where the task is to classify an input image into one of several predefined categories. In this case, the CNN would consist of one or more convolutional layers, followed by one or more fully connected layers. The input image would be convolved with the learnable filters in the convolutional layers to produce a set of feature maps, which would then be downsampled using pooling layers. The output of the last fully connected layer would be passed through a softmax activation function to produce a probability distribution over the possible categories."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bec569a7-25de-45db-b6b6-907b27a59d88",
+   "metadata": {},
+   "source": [
+    "Project idea:\n",
+    "\n",
+    "Let's say you want to build a model to recognize emotions in speech data. \n",
+    "- Use a CNN to extract features from the audio signal\n",
+    "- Use an RNN to analyze the sequence of features over time. \n",
+    "\n",
+    "You could also use transfer learning by starting with a pre-trained CNN that was trained on a large dataset of audio, and fine-tuning it for your specific task of emotion recognition."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cc53d0c-6b1e-49ab-9146-62c2af16a78d",
+   "metadata": {},
+   "source": [
+    "Recurrent Neural Networks (RNNs) are a type of neural network that is specialized for sequence data, such as time series data or text. They are unique because they have recurrent layers, which allow them to maintain a \"memory\" of past inputs. This makes RNNs particularly useful for tasks that require context or long-term dependencies, such as predicting the next word in a sentence or the next value in a time series.\n",
+    "\n",
+    "RNNs operate by processing one input at a time and updating their internal memory state based on the current input and the previous memory state. This means that RNNs can take in sequences of varying lengths and output variable-length sequences as well.\n",
+    "\n",
+    "To improve the performance of RNNs, Long Short-Term Memory (LSTM) and Gated Recurrent Unit (GRU) cells are often used in conjunction with them. These are specialized types of recurrent layers that allow RNNs to selectively retain or discard information in their memory, improving their ability to remember important information over long sequences.\n",
+    "\n",
+    "Overall, RNNs are a powerful tool for working with sequential data, and their ability to maintain memory across time makes them particularly useful for applications such as language modeling, speech recognition, and time series prediction."
+   ]
   }
  ],
  "metadata": {
@@ -394,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
