--- a/pytorch_exercises.ipynb
+++ b/pytorch_exercises.ipynb
@@ -47,10 +47,10 @@
       "tensor([[1., 1.],\n",
       "        [1., 1.],\n",
       "        [1., 1.]])\n",
-      "tensor([[3, 2, 3, 4, 4, 0],\n",
-      "        [2, 6, 6, 4, 2, 5],\n",
-      "        [4, 2, 2, 0, 6, 2],\n",
-      "        [8, 2, 5, 6, 3, 2]])\n"
+      "tensor([[6, 1, 7, 5, 3, 7],\n",
+      "        [1, 7, 0, 7, 3, 8],\n",
+      "        [5, 5, 8, 1, 1, 8],\n",
+      "        [2, 5, 4, 6, 5, 1]])\n"
      ]
     }
    ],
@@ -245,70 +245,70 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.4599, 0.5394, 0.4764, 0.4776, 0.5054, 0.5076, 0.4749, 0.4923, 0.5280,\n",
-       "         0.4596],\n",
-       "        [0.5115, 0.5050, 0.4786, 0.4920, 0.4989, 0.4763, 0.4771, 0.5327, 0.5011,\n",
-       "         0.5063],\n",
-       "        [0.5041, 0.5357, 0.5031, 0.4684, 0.5349, 0.4862, 0.5036, 0.5065, 0.5069,\n",
-       "         0.5097],\n",
-       "        [0.4905, 0.4959, 0.4692, 0.5008, 0.5270, 0.4744, 0.5156, 0.5101, 0.5320,\n",
-       "         0.4808],\n",
-       "        [0.5056, 0.5185, 0.4976, 0.5044, 0.5101, 0.4506, 0.4938, 0.5050, 0.5355,\n",
-       "         0.5075],\n",
-       "        [0.5027, 0.4959, 0.4888, 0.5201, 0.5160, 0.4874, 0.4763, 0.4828, 0.5213,\n",
-       "         0.4990],\n",
-       "        [0.4873, 0.5053, 0.4879, 0.4771, 0.5255, 0.4896, 0.5024, 0.5420, 0.5096,\n",
-       "         0.5245],\n",
-       "        [0.4846, 0.4942, 0.4465, 0.4902, 0.5452, 0.4736, 0.4758, 0.5261, 0.4948,\n",
-       "         0.4560],\n",
-       "        [0.5100, 0.4994, 0.4615, 0.4500, 0.5217, 0.4697, 0.5069, 0.5296, 0.4864,\n",
-       "         0.4469],\n",
-       "        [0.5345, 0.5522, 0.4715, 0.4894, 0.5062, 0.4539, 0.5031, 0.4943, 0.5135,\n",
-       "         0.5134],\n",
-       "        [0.5103, 0.4941, 0.4789, 0.5018, 0.5538, 0.5052, 0.4603, 0.5385, 0.5097,\n",
-       "         0.4808],\n",
-       "        [0.5154, 0.5016, 0.4700, 0.5040, 0.5359, 0.4998, 0.5012, 0.4996, 0.5220,\n",
-       "         0.4701],\n",
-       "        [0.4947, 0.5138, 0.4643, 0.4890, 0.5295, 0.4630, 0.5099, 0.4828, 0.4986,\n",
-       "         0.4869],\n",
-       "        [0.4843, 0.5195, 0.4700, 0.4790, 0.5199, 0.4489, 0.4967, 0.4904, 0.4786,\n",
-       "         0.4806],\n",
-       "        [0.4865, 0.5261, 0.5091, 0.4582, 0.5443, 0.4964, 0.4849, 0.5151, 0.5040,\n",
-       "         0.4914],\n",
-       "        [0.5022, 0.5284, 0.4973, 0.5173, 0.5530, 0.4916, 0.4741, 0.5355, 0.5031,\n",
-       "         0.4801],\n",
-       "        [0.4908, 0.5321, 0.4704, 0.4894, 0.5117, 0.4541, 0.4968, 0.5396, 0.4812,\n",
-       "         0.4898],\n",
-       "        [0.5346, 0.4728, 0.4670, 0.4954, 0.5138, 0.5047, 0.4836, 0.5013, 0.4810,\n",
-       "         0.4942],\n",
-       "        [0.4702, 0.4903, 0.4683, 0.4994, 0.5194, 0.4916, 0.4798, 0.5129, 0.4824,\n",
-       "         0.4843],\n",
-       "        [0.4929, 0.5249, 0.4889, 0.4913, 0.5239, 0.4809, 0.4929, 0.5279, 0.5294,\n",
-       "         0.4780],\n",
-       "        [0.4905, 0.5410, 0.4785, 0.5073, 0.4958, 0.4921, 0.5048, 0.5021, 0.5201,\n",
-       "         0.4699],\n",
-       "        [0.4883, 0.4947, 0.4744, 0.4731, 0.5181, 0.4784, 0.4699, 0.5331, 0.5118,\n",
-       "         0.4979],\n",
-       "        [0.4830, 0.5021, 0.4694, 0.4860, 0.4906, 0.4440, 0.4824, 0.5187, 0.4932,\n",
-       "         0.4944],\n",
-       "        [0.5287, 0.5209, 0.4901, 0.4880, 0.5259, 0.4890, 0.4717, 0.5440, 0.4744,\n",
-       "         0.5032],\n",
-       "        [0.5199, 0.5103, 0.4796, 0.4929, 0.5149, 0.4995, 0.4993, 0.5142, 0.4779,\n",
+       "tensor([[0.4878, 0.5164, 0.4825, 0.4367, 0.5052, 0.5202, 0.5181, 0.4485, 0.4437,\n",
+       "         0.5232],\n",
+       "        [0.4469, 0.4917, 0.5048, 0.4503, 0.5011, 0.5050, 0.5291, 0.4710, 0.4645,\n",
+       "         0.5475],\n",
+       "        [0.4889, 0.5064, 0.4846, 0.4711, 0.5018, 0.4856, 0.5136, 0.4868, 0.4779,\n",
+       "         0.5180],\n",
+       "        [0.4889, 0.5429, 0.4974, 0.4521, 0.4971, 0.5038, 0.5274, 0.4596, 0.4710,\n",
+       "         0.5384],\n",
+       "        [0.4996, 0.5237, 0.5253, 0.4723, 0.5019, 0.4860, 0.5225, 0.4906, 0.4650,\n",
+       "         0.5490],\n",
+       "        [0.4659, 0.5268, 0.4937, 0.4814, 0.4915, 0.4839, 0.5026, 0.4484, 0.4911,\n",
+       "         0.5483],\n",
+       "        [0.4740, 0.4887, 0.5143, 0.4540, 0.5100, 0.5168, 0.4976, 0.4616, 0.4572,\n",
+       "         0.5261],\n",
+       "        [0.4848, 0.5180, 0.4662, 0.4627, 0.4928, 0.4872, 0.5367, 0.4900, 0.4803,\n",
+       "         0.5520],\n",
+       "        [0.4798, 0.5079, 0.5056, 0.4484, 0.4851, 0.4766, 0.5198, 0.4655, 0.4739,\n",
+       "         0.5515],\n",
+       "        [0.4938, 0.4832, 0.4867, 0.5188, 0.4933, 0.4979, 0.5177, 0.4767, 0.4772,\n",
+       "         0.5400],\n",
+       "        [0.4993, 0.5246, 0.4843, 0.4408, 0.4724, 0.4763, 0.5364, 0.4720, 0.4667,\n",
+       "         0.5371],\n",
+       "        [0.4858, 0.5161, 0.4995, 0.4658, 0.5007, 0.4738, 0.5007, 0.4683, 0.4554,\n",
+       "         0.5261],\n",
+       "        [0.4742, 0.5223, 0.4764, 0.4851, 0.4943, 0.4840, 0.5000, 0.4657, 0.4734,\n",
+       "         0.5241],\n",
+       "        [0.5024, 0.5218, 0.5033, 0.4748, 0.4849, 0.5117, 0.5273, 0.5079, 0.4946,\n",
+       "         0.5152],\n",
+       "        [0.4679, 0.4993, 0.5034, 0.4905, 0.5127, 0.4698, 0.4906, 0.5094, 0.4798,\n",
+       "         0.5356],\n",
+       "        [0.4867, 0.4993, 0.4983, 0.4804, 0.5008, 0.4747, 0.4916, 0.4790, 0.4499,\n",
+       "         0.5455],\n",
+       "        [0.4909, 0.5296, 0.5009, 0.4710, 0.4712, 0.4904, 0.5158, 0.4817, 0.4648,\n",
+       "         0.5332],\n",
+       "        [0.4745, 0.5024, 0.4835, 0.4912, 0.4786, 0.4807, 0.5190, 0.4350, 0.4710,\n",
+       "         0.5634],\n",
+       "        [0.4966, 0.5163, 0.5093, 0.4688, 0.5064, 0.4940, 0.5134, 0.4878, 0.4522,\n",
+       "         0.5389],\n",
+       "        [0.4694, 0.5091, 0.5341, 0.4643, 0.5047, 0.5000, 0.4776, 0.4619, 0.4706,\n",
        "         0.5060],\n",
-       "        [0.4971, 0.5054, 0.4598, 0.4919, 0.5127, 0.4801, 0.4897, 0.5300, 0.5099,\n",
-       "         0.4795],\n",
-       "        [0.5040, 0.5124, 0.4732, 0.5070, 0.5077, 0.4671, 0.4596, 0.5215, 0.4762,\n",
-       "         0.4849],\n",
-       "        [0.4878, 0.4792, 0.4709, 0.4917, 0.5182, 0.4776, 0.5149, 0.5027, 0.5138,\n",
-       "         0.4651],\n",
-       "        [0.4841, 0.5325, 0.4365, 0.4807, 0.5054, 0.4997, 0.4896, 0.5321, 0.4843,\n",
-       "         0.4874],\n",
-       "        [0.4769, 0.4804, 0.4344, 0.5131, 0.5086, 0.4577, 0.4800, 0.5185, 0.4723,\n",
-       "         0.5061],\n",
-       "        [0.4823, 0.5397, 0.4445, 0.4918, 0.5274, 0.4567, 0.5019, 0.5079, 0.5101,\n",
-       "         0.4783],\n",
-       "        [0.4879, 0.5211, 0.4517, 0.5125, 0.5053, 0.4784, 0.5268, 0.5061, 0.4812,\n",
-       "         0.4869]], grad_fn=<SigmoidBackward0>)"
+       "        [0.4625, 0.5132, 0.5113, 0.4835, 0.5141, 0.5089, 0.5335, 0.4894, 0.4693,\n",
+       "         0.5257],\n",
+       "        [0.4795, 0.4869, 0.4847, 0.4700, 0.5079, 0.4837, 0.5109, 0.5203, 0.4934,\n",
+       "         0.4955],\n",
+       "        [0.5008, 0.4841, 0.5055, 0.4645, 0.4712, 0.4817, 0.5197, 0.4968, 0.4853,\n",
+       "         0.5476],\n",
+       "        [0.4646, 0.5213, 0.5020, 0.4431, 0.5304, 0.4712, 0.4918, 0.4690, 0.4887,\n",
+       "         0.5296],\n",
+       "        [0.4749, 0.5158, 0.4979, 0.4575, 0.5107, 0.4932, 0.5154, 0.4688, 0.4540,\n",
+       "         0.5432],\n",
+       "        [0.4648, 0.5022, 0.4980, 0.4849, 0.4694, 0.5189, 0.4699, 0.4430, 0.4723,\n",
+       "         0.5409],\n",
+       "        [0.4791, 0.5351, 0.4973, 0.4505, 0.5229, 0.4487, 0.5130, 0.4967, 0.4533,\n",
+       "         0.5499],\n",
+       "        [0.5027, 0.5108, 0.4834, 0.4443, 0.5057, 0.5111, 0.5267, 0.4721, 0.4454,\n",
+       "         0.5435],\n",
+       "        [0.4784, 0.5098, 0.4814, 0.4555, 0.5125, 0.4905, 0.4907, 0.5044, 0.4450,\n",
+       "         0.5053],\n",
+       "        [0.5101, 0.4931, 0.5032, 0.4675, 0.4785, 0.4510, 0.5063, 0.4962, 0.4537,\n",
+       "         0.5142],\n",
+       "        [0.4824, 0.4796, 0.5293, 0.4705, 0.4698, 0.5056, 0.5176, 0.4950, 0.4793,\n",
+       "         0.5113],\n",
+       "        [0.4725, 0.5086, 0.4660, 0.4724, 0.5273, 0.4999, 0.5023, 0.4900, 0.4564,\n",
+       "         0.5311]], grad_fn=<SigmoidBackward0>)"
       ]
      },
      "execution_count": 6,
@@ -329,6 +329,28 @@
     "- Use the ReLU activation function for the hidden layers and the softmax activation function for the output layer. \n",
     "- Make the convolutional layer have 10 output channels, a kernel size of 5, and a stride of 1. \n",
     "- Make the first fully connected layer have 100 output units and the second fully connected layer have 10 output units (for the 10 possible digit classes in MNIST)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3eadc59-78c7-4c6e-8fcc-9028848059db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(MyNet, self).__init__()\n",
+    "        self.hidden1 = nn.Linear(784, 256)\n",
+    "        self.hidden2 = nn.Linear(256, 128)\n",
+    "        self.output = nn.Linear(128, 10)\n",
+    "        \n",
+    "    #The forward method is called internally for the MyNet class by the __call__ method.\n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.hidden1(x))\n",
+    "        x = torch.relu(self.hidden2(x))\n",
+    "        x = torch.sigmoid(self.output(x))\n",
+    "        return x"
    ]
   },
   {
@@ -447,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
