--- a/pytorch_exercises.ipynb
+++ b/pytorch_exercises.ipynb
@@ -47,10 +47,10 @@
       "tensor([[1., 1.],\n",
       "        [1., 1.],\n",
       "        [1., 1.]])\n",
-      "tensor([[6, 1, 7, 5, 3, 7],\n",
-      "        [1, 7, 0, 7, 3, 8],\n",
-      "        [5, 5, 8, 1, 1, 8],\n",
-      "        [2, 5, 4, 6, 5, 1]])\n"
+      "tensor([[7, 6, 0, 3, 0, 3],\n",
+      "        [1, 0, 2, 3, 1, 6],\n",
+      "        [6, 2, 0, 1, 1, 4],\n",
+      "        [4, 6, 4, 5, 0, 1]])\n"
      ]
     }
    ],
@@ -245,70 +245,70 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.4878, 0.5164, 0.4825, 0.4367, 0.5052, 0.5202, 0.5181, 0.4485, 0.4437,\n",
-       "         0.5232],\n",
-       "        [0.4469, 0.4917, 0.5048, 0.4503, 0.5011, 0.5050, 0.5291, 0.4710, 0.4645,\n",
-       "         0.5475],\n",
-       "        [0.4889, 0.5064, 0.4846, 0.4711, 0.5018, 0.4856, 0.5136, 0.4868, 0.4779,\n",
-       "         0.5180],\n",
-       "        [0.4889, 0.5429, 0.4974, 0.4521, 0.4971, 0.5038, 0.5274, 0.4596, 0.4710,\n",
-       "         0.5384],\n",
-       "        [0.4996, 0.5237, 0.5253, 0.4723, 0.5019, 0.4860, 0.5225, 0.4906, 0.4650,\n",
-       "         0.5490],\n",
-       "        [0.4659, 0.5268, 0.4937, 0.4814, 0.4915, 0.4839, 0.5026, 0.4484, 0.4911,\n",
-       "         0.5483],\n",
-       "        [0.4740, 0.4887, 0.5143, 0.4540, 0.5100, 0.5168, 0.4976, 0.4616, 0.4572,\n",
-       "         0.5261],\n",
-       "        [0.4848, 0.5180, 0.4662, 0.4627, 0.4928, 0.4872, 0.5367, 0.4900, 0.4803,\n",
-       "         0.5520],\n",
-       "        [0.4798, 0.5079, 0.5056, 0.4484, 0.4851, 0.4766, 0.5198, 0.4655, 0.4739,\n",
-       "         0.5515],\n",
-       "        [0.4938, 0.4832, 0.4867, 0.5188, 0.4933, 0.4979, 0.5177, 0.4767, 0.4772,\n",
-       "         0.5400],\n",
-       "        [0.4993, 0.5246, 0.4843, 0.4408, 0.4724, 0.4763, 0.5364, 0.4720, 0.4667,\n",
-       "         0.5371],\n",
-       "        [0.4858, 0.5161, 0.4995, 0.4658, 0.5007, 0.4738, 0.5007, 0.4683, 0.4554,\n",
-       "         0.5261],\n",
-       "        [0.4742, 0.5223, 0.4764, 0.4851, 0.4943, 0.4840, 0.5000, 0.4657, 0.4734,\n",
-       "         0.5241],\n",
-       "        [0.5024, 0.5218, 0.5033, 0.4748, 0.4849, 0.5117, 0.5273, 0.5079, 0.4946,\n",
-       "         0.5152],\n",
-       "        [0.4679, 0.4993, 0.5034, 0.4905, 0.5127, 0.4698, 0.4906, 0.5094, 0.4798,\n",
-       "         0.5356],\n",
-       "        [0.4867, 0.4993, 0.4983, 0.4804, 0.5008, 0.4747, 0.4916, 0.4790, 0.4499,\n",
-       "         0.5455],\n",
-       "        [0.4909, 0.5296, 0.5009, 0.4710, 0.4712, 0.4904, 0.5158, 0.4817, 0.4648,\n",
-       "         0.5332],\n",
-       "        [0.4745, 0.5024, 0.4835, 0.4912, 0.4786, 0.4807, 0.5190, 0.4350, 0.4710,\n",
-       "         0.5634],\n",
-       "        [0.4966, 0.5163, 0.5093, 0.4688, 0.5064, 0.4940, 0.5134, 0.4878, 0.4522,\n",
-       "         0.5389],\n",
-       "        [0.4694, 0.5091, 0.5341, 0.4643, 0.5047, 0.5000, 0.4776, 0.4619, 0.4706,\n",
-       "         0.5060],\n",
-       "        [0.4625, 0.5132, 0.5113, 0.4835, 0.5141, 0.5089, 0.5335, 0.4894, 0.4693,\n",
-       "         0.5257],\n",
-       "        [0.4795, 0.4869, 0.4847, 0.4700, 0.5079, 0.4837, 0.5109, 0.5203, 0.4934,\n",
-       "         0.4955],\n",
-       "        [0.5008, 0.4841, 0.5055, 0.4645, 0.4712, 0.4817, 0.5197, 0.4968, 0.4853,\n",
-       "         0.5476],\n",
-       "        [0.4646, 0.5213, 0.5020, 0.4431, 0.5304, 0.4712, 0.4918, 0.4690, 0.4887,\n",
-       "         0.5296],\n",
-       "        [0.4749, 0.5158, 0.4979, 0.4575, 0.5107, 0.4932, 0.5154, 0.4688, 0.4540,\n",
-       "         0.5432],\n",
-       "        [0.4648, 0.5022, 0.4980, 0.4849, 0.4694, 0.5189, 0.4699, 0.4430, 0.4723,\n",
-       "         0.5409],\n",
-       "        [0.4791, 0.5351, 0.4973, 0.4505, 0.5229, 0.4487, 0.5130, 0.4967, 0.4533,\n",
-       "         0.5499],\n",
-       "        [0.5027, 0.5108, 0.4834, 0.4443, 0.5057, 0.5111, 0.5267, 0.4721, 0.4454,\n",
-       "         0.5435],\n",
-       "        [0.4784, 0.5098, 0.4814, 0.4555, 0.5125, 0.4905, 0.4907, 0.5044, 0.4450,\n",
-       "         0.5053],\n",
-       "        [0.5101, 0.4931, 0.5032, 0.4675, 0.4785, 0.4510, 0.5063, 0.4962, 0.4537,\n",
-       "         0.5142],\n",
-       "        [0.4824, 0.4796, 0.5293, 0.4705, 0.4698, 0.5056, 0.5176, 0.4950, 0.4793,\n",
-       "         0.5113],\n",
-       "        [0.4725, 0.5086, 0.4660, 0.4724, 0.5273, 0.4999, 0.5023, 0.4900, 0.4564,\n",
-       "         0.5311]], grad_fn=<SigmoidBackward0>)"
+       "tensor([[0.5004, 0.4929, 0.5017, 0.5127, 0.5248, 0.5417, 0.5030, 0.4986, 0.5419,\n",
+       "         0.5190],\n",
+       "        [0.5357, 0.4917, 0.4905, 0.4956, 0.4833, 0.5439, 0.5105, 0.5069, 0.4895,\n",
+       "         0.4994],\n",
+       "        [0.5166, 0.4670, 0.4735, 0.5098, 0.4692, 0.5226, 0.5181, 0.4940, 0.5525,\n",
+       "         0.5072],\n",
+       "        [0.5002, 0.4538, 0.5099, 0.4961, 0.4745, 0.5524, 0.4744, 0.4945, 0.5292,\n",
+       "         0.4871],\n",
+       "        [0.4998, 0.4816, 0.4829, 0.5142, 0.5030, 0.5116, 0.4734, 0.4780, 0.5164,\n",
+       "         0.4857],\n",
+       "        [0.4884, 0.4818, 0.4984, 0.4577, 0.4717, 0.5200, 0.5054, 0.5092, 0.5423,\n",
+       "         0.5027],\n",
+       "        [0.5088, 0.4642, 0.5112, 0.5008, 0.4825, 0.5251, 0.5374, 0.4762, 0.5271,\n",
+       "         0.4702],\n",
+       "        [0.4825, 0.4788, 0.4863, 0.5133, 0.4789, 0.5054, 0.5163, 0.4869, 0.5267,\n",
+       "         0.4960],\n",
+       "        [0.5197, 0.4767, 0.5050, 0.4841, 0.4627, 0.5038, 0.5099, 0.4691, 0.5331,\n",
+       "         0.4681],\n",
+       "        [0.4867, 0.4986, 0.5081, 0.5100, 0.4820, 0.5205, 0.5127, 0.5133, 0.5022,\n",
+       "         0.5341],\n",
+       "        [0.4906, 0.4564, 0.4861, 0.5088, 0.4683, 0.5399, 0.5133, 0.4697, 0.5472,\n",
+       "         0.5250],\n",
+       "        [0.5181, 0.4805, 0.5166, 0.5089, 0.5031, 0.5070, 0.5032, 0.4723, 0.5223,\n",
+       "         0.4988],\n",
+       "        [0.5343, 0.4852, 0.4965, 0.5310, 0.5052, 0.5185, 0.4492, 0.4921, 0.5238,\n",
+       "         0.4850],\n",
+       "        [0.5380, 0.4615, 0.5070, 0.5210, 0.4822, 0.5553, 0.4722, 0.4910, 0.5406,\n",
+       "         0.4960],\n",
+       "        [0.4982, 0.4965, 0.5019, 0.5017, 0.5044, 0.5392, 0.4892, 0.4468, 0.5300,\n",
+       "         0.5006],\n",
+       "        [0.4986, 0.4898, 0.5072, 0.5187, 0.4983, 0.5338, 0.4985, 0.4764, 0.5355,\n",
+       "         0.5157],\n",
+       "        [0.5186, 0.4745, 0.5106, 0.5363, 0.4624, 0.5154, 0.5036, 0.5025, 0.5425,\n",
+       "         0.4972],\n",
+       "        [0.5228, 0.4724, 0.4966, 0.5299, 0.5099, 0.5130, 0.4760, 0.4545, 0.5389,\n",
+       "         0.4710],\n",
+       "        [0.4923, 0.4707, 0.4952, 0.4973, 0.5228, 0.4977, 0.5044, 0.4475, 0.5197,\n",
+       "         0.4882],\n",
+       "        [0.5158, 0.4810, 0.4704, 0.4883, 0.4772, 0.5101, 0.5035, 0.4881, 0.5243,\n",
+       "         0.4940],\n",
+       "        [0.4850, 0.4708, 0.5395, 0.5058, 0.5101, 0.5154, 0.5301, 0.5065, 0.4940,\n",
+       "         0.5011],\n",
+       "        [0.5073, 0.4642, 0.5039, 0.5021, 0.4728, 0.5453, 0.4648, 0.4755, 0.4875,\n",
+       "         0.4682],\n",
+       "        [0.5093, 0.4834, 0.5096, 0.5084, 0.5068, 0.5200, 0.4720, 0.4955, 0.5339,\n",
+       "         0.5059],\n",
+       "        [0.5262, 0.4657, 0.4794, 0.5010, 0.4851, 0.5169, 0.5005, 0.4693, 0.5293,\n",
+       "         0.4867],\n",
+       "        [0.4977, 0.4970, 0.4971, 0.5286, 0.4807, 0.5334, 0.5438, 0.4886, 0.5207,\n",
+       "         0.4653],\n",
+       "        [0.5527, 0.4724, 0.5057, 0.5231, 0.4867, 0.5258, 0.4805, 0.4761, 0.5293,\n",
+       "         0.4802],\n",
+       "        [0.5374, 0.4600, 0.5160, 0.5258, 0.4743, 0.5426, 0.5198, 0.4809, 0.5168,\n",
+       "         0.4811],\n",
+       "        [0.4926, 0.4335, 0.4918, 0.4833, 0.4918, 0.5190, 0.5006, 0.4596, 0.5403,\n",
+       "         0.5174],\n",
+       "        [0.5177, 0.4953, 0.4868, 0.5388, 0.5082, 0.5387, 0.4639, 0.4963, 0.5459,\n",
+       "         0.4911],\n",
+       "        [0.4816, 0.5039, 0.5101, 0.5298, 0.4956, 0.5329, 0.4967, 0.4748, 0.4795,\n",
+       "         0.5163],\n",
+       "        [0.5063, 0.4936, 0.5242, 0.5095, 0.4936, 0.5344, 0.4984, 0.4927, 0.5295,\n",
+       "         0.5108],\n",
+       "        [0.5041, 0.4725, 0.4958, 0.5130, 0.5252, 0.5212, 0.5160, 0.5127, 0.5597,\n",
+       "         0.4810]], grad_fn=<SigmoidBackward0>)"
       ]
      },
      "execution_count": 6,
@@ -333,12 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a3eadc59-78c7-4c6e-8fcc-9028848059db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyNet(nn.Module):\n",
+    "class NewNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(MyNet, self).__init__()\n",
     "        self.hidden1 = nn.Linear(784, 256)\n",
